--- a/App/app/src/main/AndroidManifest.xml
+++ b/App/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/Theme.ConcentrationGameApp"
         tools:targetApi="31">
         <activity
+            android:name=".HighScoreActivity"
+            android:exported="false" />
+        <activity
             android:name=".GameActivity"
             android:exported="false">
             <meta-data
